Added solutions I have completed.

--- a/SolutionLibrary/SolutionLibraryTests/SolutionLibraryTests.csproj
+++ b/SolutionLibrary/SolutionLibraryTests/SolutionLibraryTests.csproj
@@ -53,6 +53,9 @@
   <ItemGroup>
     <Compile Include="ArraysAndStrings\CheckPermutationTests.cs" />
     <Compile Include="ArraysAndStrings\IsUniqueTests.cs" />
+    <Compile Include="ArraysAndStrings\OneAwayTests.cs" />
+    <Compile Include="ArraysAndStrings\PalindromePermutationTests.cs" />
+    <Compile Include="ArraysAndStrings\StringCompressionTests.cs" />
     <Compile Include="ArraysAndStrings\URLifyTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
