--- a/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
+++ b/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="ArraysAndStrings\CheckPermutation.cs" />
     <Compile Include="ArraysAndStrings\IsUnique.cs" />
+    <Compile Include="ArraysAndStrings\OneAway.cs" />
+    <Compile Include="ArraysAndStrings\PalindromePermutation.cs" />
+    <Compile Include="ArraysAndStrings\StringCompression.cs" />
     <Compile Include="ArraysAndStrings\URLify.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
