--- a/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
+++ b/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
@@ -44,8 +44,11 @@
     <Compile Include="ArraysAndStrings\IsUnique.cs" />
     <Compile Include="ArraysAndStrings\OneAway.cs" />
     <Compile Include="ArraysAndStrings\PalindromePermutation.cs" />
+    <Compile Include="ArraysAndStrings\RotateMatrix.cs" />
     <Compile Include="ArraysAndStrings\StringCompression.cs" />
+    <Compile Include="ArraysAndStrings\StringRotation.cs" />
     <Compile Include="ArraysAndStrings\URLify.cs" />
+    <Compile Include="ArraysAndStrings\ZeroMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
