--- a/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
+++ b/SolutionLibrary/SolutionLibrary/SolutionLibrary.csproj
@@ -50,7 +50,10 @@
     <Compile Include="ArraysAndStrings\URLify.cs" />
     <Compile Include="ArraysAndStrings\ZeroMatrix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreesAndGraphs\DataStructures.cs" />
+    <Compile Include="TreesAndGraphs\RouteBetweenNodes.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
