--- a/SolutionLibrary/SolutionLibraryTests/SolutionLibraryTests.csproj
+++ b/SolutionLibrary/SolutionLibraryTests/SolutionLibraryTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ArraysAndStrings\ZeroMatrixTests.cs" />
     <Compile Include="CollectionAssertComperator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreesAndGraphs\RouteBetweenNodesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolutionLibrary\SolutionLibrary.csproj">
